# codex

./: .dockerignore  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Dockerfile  NOTICE  PNPM.md  README.md  cliff.toml  flake.nix  package.json
.devcontainer/: README.md  (+1 more)
adom-rs/app-server/: Cargo.toml  README.md
adom-rs/app-server/src/: adom_message_processor.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
adom-rs/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  lib.rs  mcp_process.rs  rollout.rs
adom-rs/app-server/tests/suite/: adom_message_processor_flow.rs  archive_conversation.rs  auth.rs  config.rs  create_conversation.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
adom-rs/app-server/tests/suite/v2/: account.rs  model_list.rs  rate_limits.rs  thread_archive.rs  thread_list.rs  thread_resume.rs  thread_start.rs  turn_interrupt.rs  turn_start.rs
adom-rs/arg0/: Cargo.toml
adom-rs/arg0/src/: lib.rs
adom-rs/backend-client/: Cargo.toml
adom-rs/backend-client/src/: client.rs  types.rs
adom-rs/chatgpt/: Cargo.toml  README.md
adom-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
adom-rs/chatgpt/tests/: task_turn_fixture.json
adom-rs/chatgpt/tests/suite/: apply_command_e2e.rs
adom-rs/cli/: Cargo.toml
adom-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs
adom-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
adom-rs/common/: Cargo.toml  README.md
adom-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
adom-rs/file-search/: Cargo.toml  README.md
adom-rs/file-search/src/: main.rs
adom-rs/protocol-ts/: Cargo.toml  generate-ts
adom-rs/protocol-ts/src/: lib.rs  main.rs
adom-rs/responses-api-proxy/: Cargo.toml  README.md
adom-rs/responses-api-proxy/npm/: README.md  package.json
adom-rs/responses-api-proxy/src/: main.rs  read_api_key.rs
adom-rs/tui/: Cargo.toml  prompt_for_init_command.md  styles.md
adom-rs/tui/frames/adom/: frame_11.txt  frame_8.txt
adom-rs/tui/src/: additional_dirs.rs  app.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  chatwidget.rs  cli.rs  clipboard_paste.rs  diff_render.rs  file_search.rs  frames.rs  get_git_diff.rs  history_cell.rs  lib.rs  main.rs  markdown.rs  pager_overlay.rs  resume_picker.rs  session_log.rs  slash_command.rs  status_indicator_widget.rs  text_formatting.rs  update_prompt.rs  updates.rs  version.rs
adom-rs/tui/src/bottom_pane/: approval_overlay.rs  chat_composer.rs  chat_composer_history.rs  command_popup.rs  feedback_view.rs  file_search_popup.rs  list_selection_view.rs  mod.rs  prompt_args.rs
adom-rs/tui/src/bottom_pane/snapshots/: adom_tui__bottom_pane__chat_composer__tests__empty.snap  adom_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_interrupt.snap  adom_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_quit.snap  adom_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_from_overlay.snap  adom_tui__bottom_pane__chat_composer__tests__footer_mode_overlay_then_external_esc_hint.snap  adom_tui__bottom_pane__chat_composer__tests__footer_mode_shortcut_overlay.snap  adom_tui__bottom_pane__feedback_view__tests__feedback_view_render.snap  adom_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_with_subtitle.snap  adom_tui__bottom_pane__list_selection_view__tests__list_selection_spacing_without_subtitle.snap  adom_tui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap  adom_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap  adom_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap  adom_tui__bottom_pane__tests__status_hidden_when_height_too_small_height_1.snap
adom-rs/tui/src/chatwidget/: agent.rs  interrupts.rs  tests.rs
adom-rs/tui/src/chatwidget/snapshots/: adom_tui__chatwidget__tests__approval_modal_exec.snap  adom_tui__chatwidget__tests__approval_modal_exec_no_reason.snap  adom_tui__chatwidget__tests__approval_modal_patch.snap  adom_tui__chatwidget__tests__approvals_selection_popup.snap  adom_tui__chatwidget__tests__approvals_selection_popup@windows.snap  adom_tui__chatwidget__tests__binary_size_ideal_response.snap  adom_tui__chatwidget__tests__chatwidget_tall.snap  adom_tui__chatwidget__tests__exec_approval_history_decision_approved_short.snap  adom_tui__chatwidget__tests__exec_approval_modal_exec.snap  adom_tui__chatwidget__tests__feedback_upload_consent_popup.snap  adom_tui__chatwidget__tests__full_access_confirmation_popup.snap  adom_tui__chatwidget__tests__model_reasoning_selection_popup.snap  adom_tui__chatwidget__tests__model_selection_popup.snap  adom_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap  adom_tui__chatwidget__tests__status_widget_active.snap  adom_tui__chatwidget__tests__status_widget_and_approval_modal.snap  adom_tui__chatwidget__tests__update_popup.snap
adom-rs/tui/src/exec_cell/: model.rs  render.rs
adom-rs/tui/src/onboarding/: auth.rs  onboarding_screen.rs  trust_directory.rs  welcome.rs  windows.rs
adom-rs/tui/src/onboarding/snapshots/: adom_tui__onboarding__trust_directory__tests__renders_snapshot_for_git_repo.snap
adom-rs/tui/src/public_widgets/: composer_input.rs
adom-rs/tui/src/snapshots/: adom_tui__diff_render__tests__single_line_replacement_counts.snap  adom_tui__update_prompt__tests__update_prompt_modal.snap
adom-rs/tui/src/status/: card.rs  helpers.rs  rate_limits.rs  tests.rs
adom-rs/tui/src/status/snapshots/: adom_tui__status__tests__status_snapshot_includes_monthly_limit.snap  adom_tui__status__tests__status_snapshot_includes_reasoning_details.snap  adom_tui__status__tests__status_snapshot_shows_empty_limits_message.snap  (+2 more)
adom-rs/tui/tests/fixtures/: binary-size-log.jsonl  oss-story.jsonl
adom-rs/tui/tests/suite/: status_indicator.rs  vt100_history.rs  vt100_live_commit.rs
(+373 files in other folders)
