[package]
edition = "2024"
name = "adom-app-server"
version = { workspace = true }

[[bin]]
name = "adom-app-server"
path = "src/main.rs"

[lib]
name = "adom_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
adom-arg0 = { workspace = true }
adom-common = { workspace = true, features = ["cli"] }
adom-core = { workspace = true }
adom-backend-client = { workspace = true }
adom-file-search = { workspace = true }
adom-login = { workspace = true }
adom-protocol = { workspace = true }
adom-app-server-protocol = { workspace = true }
adom-feedback = { workspace = true }
adom-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
opentelemetry-appender-tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
assert_cmd = { workspace = true }
base64 = { workspace = true }
core_test_support = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
wiremock = { workspace = true }
