[package]
edition = "2024"
name = "adom-arg0"
version = { workspace = true }

[lib]
name = "adom_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
adom-apply-patch = { workspace = true }
adom-core = { workspace = true }
adom-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
