[package]
name = "adom-backend-client"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
adom-backend-openapi-models = { path = "../adom-backend-openapi-models" }
adom-protocol = { workspace = true }
adom-core = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
