[package]
edition = "2024"
name = "adom-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
adom-common = { workspace = true, features = ["cli"] }
adom-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
adom-git = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
