[package]
edition = "2024"
name = "adom-file-search"
version = { workspace = true }

[[bin]]
name = "adom-file-search"
path = "src/main.rs"

[lib]
name = "adom_file_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
